# qmk-keymap-gen

./: .gitignore  Cargo.toml  README.md  default.nix
.github/workflows/: build.not-active  build.yml
nix/: sources.json
src/: combos.rs  io.rs  lib.rs  macros.rs  main.rs  templates.rs  types.rs  types.rs.bak
templates/: combo_terms.c  combos.c  combos.def  combos.h  combos.txt  homekey.txt  keymap.txt  layer.html  layers.txt  row.txt
