[package]
name = "kbtools"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
askama = "0.11.1"
convert_case = "0.5.0"
regex = "1"
serde_dhall = "0.11.0"
clap = { version = "3.0", features = ["derive"] }